@@ -4,6 +4,9 @@ Changelog
 1.3a3 - Unreleased
 ------------------
 
+- Convert test setup to `collective.testcaselayer`.
+  [witsch]
+
 - Updated tests to use id="content" instead of .documentContent.
   Refs http://dev.plone.org/plone/ticket/10231
   [limi]
